[package]
name = "unet"
version = "0.0.0"
edition = "2024"

[dependencies]
arrayref = "0.3.9"
bitflags = "2.9.0"
bytes = "1.10.1"
ethertype = "0.2.2"
libc = "0.2.172"
rangemap = "1.5.1"
static_assertions = "1.1.0"
thiserror = "2.0.12"
zerocopy = { version = "0.8.25", features = ["derive", "std"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
